# argsexample

./: CMakeLists.txt  main.rs  printargs.c  test.sh
